--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@gsap/react": "^2.1.1",
     "autoprefixer": "^10.4.20",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.446.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
