--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
