--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-floating-whatsapp": "^5.0.8",
     "react-icons": "^5.3.0",
+    "react-pdf": "^9.1.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.4.13"
