--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-pdf": "^9.1.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "swiper": "^11.1.14",
     "tailwindcss": "^3.4.13"
   },
   "devDependencies": {
